# andletenkov.github.io

./: .gitignore  .mise.toml  404.html  Cargo.toml  Dioxus.toml  README.md  build.rs  dracula.css  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml
assets/: index.json
assets/dioxus/: andletenkov-github-io.js  andletenkov-github-io.js.br  andletenkov-github-io_bg.wasm  andletenkov-github-io_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
posts/: rust-smart-pointers.md
src/: main.rs  router.rs  storage.rs  theme.rs
src/components/: blog.rs  footer.rs  home.rs  mod.rs  nav_bar.rs  not_found.rs
