[package]
name = "andletenkov-github-io"
version = "0.1.0"
authors = ["Andrey Letenkov <andletenkov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dioxus = { version = "0.5.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
gloo-net = "0.6.0"
wasm-bindgen = "=0.2.93"
manganis = "0.2.2"
pulldown-cmark = "0.11.0"
serde = "1.0.208"
serde_json = "1.0.125"
js-sys = "=0.3.69"
gloo-storage = "0.3.0"

